2006-01-10  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPatterns.cs :
	  - Added StartAttDeriv(), EndAttDeriv() and IsTextValueDependent.
	    (See corresponding changes in RelaxngValidatingReader.cs).
	  - Added a bunch of derivative method overloads to receive 
	    MemoizationStore and memoize results efficiently.

2006-01-05  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPatterns.cs :
	  - Fixed RdpPattern.TextDeriv() and MixedTextDeriv() to not allow 
	    whitespaces incorrectly.
	  - Fixed MixedTextDeriv() to not require string argument.
	  - Erased commented code.
	  - in listDerivInternal(), skip empty strings.
	  - ValueMatch() should allow whitespaces if the pattern is nullable
	    (as defined in derivative).
	  - Replaced MakeChoice()/MakeGroup()/MakeInterleave()/MakeAfter()
	    in TextOnlyDeriv() and MixedTextDeriv(). They should not be
	    constructions but should be functions (thus, member methods).
	  - Fixed Nullable in RdpData and RdpValue to conform to the
	    derivative algorithm (it incorrectly extended to return false
	    for RELAX NG predefined datatypes).

2006-01-04  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPattern.cs :
	  - Implemented textOnlyDeriv and mixedTextDeriv of "memoization".
	    Details are described in the "derivative" algorithm:
	    http://www.thaiopensource.com/relaxng/derivative.html#Memoization
	  - Added MakeChoiceLeaf() to implement "choice-leaves":
	    http://www.thaiopensource.com/relaxng/derivative.html#Avoiding_exponential_blowup
	  - To intern effectively, reorder choice and interleave contents by
	    hash code.
	  - Avoid extra pattern creation with related to empty and notAllowed
	    as one hand of binary branches.

2006-01-03  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPattern.cs : reduced RdpFlip instantiation. Share patternPool
	  only when it does not exist.

2006-01-03  Atsushi Enomoto <atsushi@ximian.com>

	* Util.cs, RdpPatterns.cs : optimization. Removed extraneous