@@ -1,3 +1,8 @@
+2006-01-12  Atsushi Enomoto <atsushi@ximian.com>
+
+	* RdpPattern.cs :
+	  Introduced EmptyTextDeriv() so that the results could be memoized.
+
 2006-01-10  Atsushi Enomoto <atsushi@ximian.com>
 
 	* RdpPatterns.cs :
